# NotepadAI

./: CMakeLists.txt  README.md  crowdin.yml
src/: AcpAgentDefinition.h  AcpAgentManager.cpp  AcpAgentManager.h  AcpAgentRegistry.cpp  AcpAgentRegistry.h  AcpConnection.cpp  AcpConnection.h  AcpErrorClassifier.cpp  AcpErrorClassifier.h  AcpHistoryStore.cpp  AcpHistoryStore.h  AcpProtocol.cpp  AcpProtocol.h  AcpSessionModel.cpp  AcpSessionModel.h  ApplicationSettings.cpp  ApplicationSettings.h  CMakeLists.txt  CrashContext.cpp  CrashContext.h  CrashHandler.cpp  CrashHandler.h  CronExpression.cpp  CronExpression.h  DataPaths.cpp  DataPaths.h  DockedEditor.cpp  DockedEditor.h  EditorManager.cpp  EditorManager.h  FileWatcher.cpp  FileWatcher.h  FolderSearchEngine.cpp  GoalAgent.cpp  HtmlConverter.cpp  HtmlPreviewWidget.cpp  HtmlPreviewWidget.h  IAcpExecHost.h  IAcpProcessChannel.h  LanguageStylesModel.cpp  (+54 more)
src/ai/: CommitMessageGenerator.cpp  CommitMessageGenerator.h  CredentialStore.h  CredentialStore_Common.cpp  CredentialStore_Linux.cpp  CredentialStore_Mac.mm  CredentialStore_Windows.cpp  DiffCompressor.cpp  DiffCompressor.h  ILlmHttpClient.h  LlmHttpClient.cpp  LlmHttpClient.h  PromptAssembler.cpp  PromptAssembler.h  PromptImprover.cpp  PromptImprover.h  RulesLocator.cpp  RulesLocator.h  SsePartialParser.cpp  SsePartialParser.h
src/decorators/: BetterMultiSelection.cpp  BetterMultiSelection.h  EditorConfigAppDecorator.cpp  GitGutterDecorator.cpp  GitGutterDecorator.h  InlineBlameDecorator.cpp  InlineBlameDecorator.h  SurroundSelection.cpp
src/dialogs/: AcpAgentSettingsDialog.cpp  AcpAgentSettingsDialog.h  ColumnEditorDialog.cpp  EditMiniAppsDialog.cpp  EditMiniAppsDialog.h  EditScheduledTaskDialog.cpp  EditScheduledTaskDialog.h  FindReplaceDialog.cpp  InteractiveRebaseDialog.cpp  InteractiveRebaseDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  ScheduledTaskDialog.cpp  ScheduledTaskDialog.h  SendWithGoalDialog.cpp  SendWithGoalDialog.h  SshDebugDialog.cpp  SshDebugDialog.h  SshRemoteFolderPickerDialog.cpp  SshRemoteFolderPickerDialog.h  TransferLogDialog.cpp
src/docks/: AiAgentDock.cpp  AiAgentDock.h  ConflictListDock.cpp  ConflictListDock.h  ConflictMergeViewerDock.cpp  ConflictMergeViewerDock.h  DebugLogDock.cpp  EditorInspectorDock.cpp  EditorInspectorDock.h  FolderAsWorkspaceDock.cpp  FolderAsWorkspaceDock.h  FolderAsWorkspaceDock.ui  FolderAsWorkspaceFsModel.cpp  FolderAsWorkspaceFsModel.h  FolderAsWorkspaceProxyModel.cpp  FolderAsWorkspaceProxyModel.h  LanguageInspectorDock.cpp  LuaConsoleDock.cpp  LuaConsoleDock.h  TerminalDock.cpp  TerminalDock.h
src/git/: BranchPickerPopup.cpp  BranchPickerPopup.h  BranchRefParser.cpp  BranchRefParser.h  ChangesPanel.cpp  ChangesPanel.h  CommitComposer.cpp  CommitComposer.h  ConflictEntry.h  FileEncodingDetector.cpp  FileEncodingDetector.h  GitBlameParser.cpp  GitBlameParser.h  GitCommitFetcher.cpp  GitCommitFetcher.h  GitCommitView.cpp  GitCommitView.h  GitController.cpp  GitController.h  GitDiffCache.cpp  GitDiffCache.h  GitDiffFetcher.cpp  GitDiffFetcher.h  GitDiffPainter.cpp  GitDiffPainter.h  GitDiffPalette.cpp  GitDiffPalette.h  GitDiffParser.cpp  GitDiffParser.h  GitDiffSyntaxMapper.cpp  GitDiffSyntaxMapper.h  GitDiffViewController.cpp  GitDiffViewController.h  GitError.h  GitErrorClassifier.cpp  GitErrorClassifier.h  GitFileAtShaFetcher.cpp  GitFileAtShaFetcher.h  GitHistoryFetcher.cpp  GitHistoryFetcher.h  (+33 more)
src/helpers/: notepadai-editor.cpp
src/remote/: ExecutionContextRegistry.cpp  GitignoreMatcher.cpp  IFileSystemBackend.h  ISshTransport.h  IWorkspaceFsModel.h  Libssh2Transport.cpp  Libssh2Transport.h  RemoteDirectoryWatcher.cpp  RemoteDirectoryWatcher.h  RemoteExecutionContext.cpp  RemoteExecutionContext.h  RemoteFileSystemModel.cpp  RemoteFileSystemModel.h  RemoteFsBackend.cpp  RemoteFsBackend.h  RemoteGitProcessRunner.cpp  RemoteGitProcessRunner.h  RemoteTransferManager.cpp  RemoteTransferManager.h  SshConnection.cpp  SshConnection.h  SshProfile.h  SshPtyProcess.cpp  SshPtyProcess.h  SshSessionWorker.cpp  SshSessionWorker.h
src/stylesheets/: npp.css  npp_dark.css
src/widgets/: AcpImageAttachmentList.cpp  AcpImageAttachmentList.h  AcpMessageWidget.cpp  AcpMessageWidget.h  AcpPermissionPrompt.cpp  AcpPermissionPrompt.h  AcpPlanWidget.cpp  AcpPlanWidget.h  AcpSessionView.cpp  AcpSessionView.h  AcpToolCallCard.cpp  AcpToolCallCard.h  AcpUsageIndicator.cpp  AcpUsageIndicator.h  DockMiddleClickCloser.cpp  DockMiddleClickCloser.h  EditorInfoStatusBar.cpp  GoalConfigWidget.cpp  GoalConfigWidget.h  ScrollbackBuffer.cpp  ScrollbackBuffer.h  TabsQuickActionsBar.h  TaskRunnerGutter.cpp  TerminalCellSource.cpp  TerminalCellSource.h  TerminalColorScheme.cpp  TerminalColorScheme.h  TerminalWidget.cpp  TerminalWidget.h  TransferProgressBar.cpp  (+5 more)
tests/: CMakeLists.txt  FakeSshTransport.h  test_acp_agent_exit_restart.cpp  test_acp_agent_manager.cpp  test_acp_agent_registry.cpp  test_acp_dock_close_event.cpp  test_acp_error_classifier.cpp  test_acp_history_store.cpp  test_acp_image_attachment_limits.cpp  test_acp_jsonrpc_framing.cpp  test_acp_message_widget_streaming.cpp  test_acp_path_sandbox.cpp  test_acp_permission_policy.cpp  test_acp_protocol_serialization.cpp  test_acp_remote_transport.cpp  test_acp_session_model.cpp  test_acp_session_model_persistence_integration.cpp  test_acp_spawn_argv.cpp  test_acp_tool_call_card.cpp  test_acp_usage_indicator.cpp  test_application_settings_terminal.cpp  test_async_editor_load.cpp  test_cron_expression.cpp  test_git_diff_cache.cpp  test_git_diff_parser.cpp  test_git_diff_word_span_alignment.cpp  test_git_numstat_parser.cpp  test_markdown_renderer.cpp  test_profile_scope.cpp  test_remote_filesystem_model.cpp  test_remote_fs_backend.cpp  test_remote_git_runner.cpp  test_remote_poll_watch.cpp  test_scheduled_task_registry.cpp  test_scrollback_buffer.cpp  test_send_with_goal_dialog.cpp  test_shutdown_diagnostics.cpp  test_ssh_session_worker.cpp  test_ssh_transport_fixes.cpp  test_submodule_status_fetcher.cpp  (+5 more)
(+15 files in other folders)
