qt_add_executable(NotepadAI
	WIN32
	MACOSX_BUNDLE
	AcpAgentDefinition.h
	AcpAgentManager.h
	AcpAgentRegistry.h
	AcpConnection.h
	AcpErrorClassifier.h
	AcpHistoryStore.h
	AcpProtocol.h
	AcpSessionModel.h
	ActionUtils.h
	ApplicationSettings.h
	GoalActionParser.h
	GoalAgent.h
	GoalAgentSettings.h
	GoalPromptRenderer.h
	ByteArrayUtils.h
	ColorPickerDelegate.h
	ComboBoxDelegate.h
	Converter.h
	CrashContext.h
	CrashHandler.h
	DebugManager.h
	DefaultDirectoryManager.h
	DockedEditor.h
	DockedEditorTitleBar.h

	EditorManager.h
	EditorPrintPreviewRenderer.h
	FileDialogHelpers.h
	FileWatcher.h
	Finder.h
	FocusWatcher.h
	HtmlConverter.h
	IFaceTable.h
	IFaceTableMixer.h
	ISearchResultsHandler.h
	LanguageStylesModel.h
	LuaExtension.h
	LuaState.h
	Macro.h
	MacroListModel.h
	MacroManager.h
	MacroRecorder.h
	MacroStep.h
	MacroStepTableModel.h
	NotepadNextApplication.h
	NppImporter.h
	QRegexSearch.h
	RangeAllocator.h
	RecentFilesListManager.h
	RecentFilesListMenuBuilder.h
	RtfConverter.h
	SciIFaceTable.h
	ScintillaCommenter.h
	ScintillaEnums.h
	ScintillaNext.h
	SearchResultData.h
	SearchResultHighlighterDelegate.h
	SearchResultsCollector.h
	SelectionTracker.h
	SessionManager.h
	SpinBoxDelegate.h
	TranslationManager.h
	UndoAction.h
	ZoomEventWatcher.h
	ThemeResolver.h
	StylesheetResource.h
	DarkPalette.h
	ProfileScope.h
	ShutdownDiagnostics.h
	resources.qrc
	scripts.qrc
	ApplicationSettings.cpp
	AcpAgentManager.cpp
	AcpAgentRegistry.cpp
	AcpConnection.cpp
	AcpErrorClassifier.cpp
	AcpHistoryStore.cpp
	AcpProtocol.cpp
	AcpSessionModel.cpp
	GoalActionParser.cpp
	GoalAgent.cpp
	GoalAgentSettings.cpp
	GoalPromptRenderer.cpp
	ColorPickerDelegate.cpp
	ComboBoxDelegate.cpp
	Converter.cpp
	CrashContext.cpp
	CrashHandler.cpp
	DebugManager.cpp
	DefaultDirectoryManager.cpp
	DockedEditor.cpp

	EditorManager.cpp
	EditorPrintPreviewRenderer.cpp
	FileDialogHelpers.cpp
	FileWatcher.cpp
	Finder.cpp
	HtmlConverter.cpp
	IFaceTable.cpp
	IFaceTableMixer.cpp
	LanguageStylesModel.cpp
	LuaExtension.cpp
	LuaState.cpp
	Macro.cpp
	MacroListModel.cpp
	MacroManager.cpp
	MacroRecorder.cpp
	MacroStep.cpp
	MacroStepTableModel.cpp
	main.cpp
	NotepadNextApplication.cpp
	NppImporter.cpp
	QRegexSearch.cpp
	RangeAllocator.cpp
	RecentFilesListManager.cpp
	RecentFilesListMenuBuilder.cpp
	RtfConverter.cpp
	SciIFaceTable.cpp
	ScintillaCommenter.cpp
	ScintillaNext.cpp
	SearchResultHighlighterDelegate.cpp
	SearchResultsCollector.cpp
	SelectionTracker.cpp
	SessionManager.cpp
	SpinBoxDelegate.cpp
	TranslationManager.cpp
	UndoAction.cpp
	ZoomEventWatcher.cpp
	ProfileScope.cpp
	ShutdownDiagnostics.cpp
	decorators/ApplicationDecorator.cpp
	decorators/ApplicationDecorator.h
	decorators/AutoCompletion.cpp
	decorators/AutoCompletion.h
	decorators/AutoIndentation.cpp
	decorators/AutoIndentation.h
	decorators/BetterMultiSelection.cpp
	decorators/BetterMultiSelection.h
	decorators/BookMarkDecorator.cpp
	decorators/BookMarkDecorator.h
	decorators/BraceMatch.cpp
	decorators/BraceMatch.h
	decorators/EditorConfigAppDecorator.cpp
	decorators/EditorConfigAppDecorator.h
	decorators/EditorDecorator.cpp
	decorators/EditorDecorator.h
	decorators/GitGutterDecorator.cpp
	decorators/GitGutterDecorator.h
	decorators/GitGutterDiffPopup.cpp
	decorators/GitGutterDiffPopup.h
	decorators/GitGutterMarkers.cpp
	decorators/GitGutterMarkers.h
	decorators/HighlightedScrollBar.cpp
	decorators/HighlightedScrollBar.h
	decorators/InlineBlameDecorator.cpp
	decorators/InlineBlameDecorator.h
	decorators/JustfileRecipeHighlighter.cpp
	decorators/JustfileRecipeHighlighter.h
	decorators/HTMLAutoCompleteDecorator.cpp
	decorators/HTMLAutoCompleteDecorator.h
	decorators/LineNumbers.cpp
	decorators/LineNumbers.h
	decorators/MarkerAppDecorator.cpp
	decorators/MarkerAppDecorator.h
	decorators/SmartHighlighter.cpp
	decorators/SmartHighlighter.h
	decorators/SurroundSelection.cpp
	decorators/SurroundSelection.h
	decorators/URLFinder.cpp
	decorators/URLFinder.h
	dialogs/AcpAgentSettingsDialog.cpp
	dialogs/AcpAgentSettingsDialog.h
	dialogs/AcpAgentSettingsDialog.ui
	dialogs/SendWithGoalDialog.cpp
	dialogs/SendWithGoalDialog.h
	dialogs/ColumnEditorDialog.cpp
	dialogs/ColumnEditorDialog.h
	dialogs/ColumnEditorDialog.ui
	dialogs/FindReplaceDialog.cpp
	dialogs/FindReplaceDialog.h
	dialogs/FindReplaceDialog.ui
	dialogs/MacroEditorDialog.cpp
	dialogs/MacroEditorDialog.h
	dialogs/MacroEditorDialog.ui
	dialogs/MacroRunDialog.cpp
	dialogs/MacroRunDialog.h
	dialogs/MacroRunDialog.ui
	dialogs/MacroSaveDialog.cpp
	dialogs/MacroSaveDialog.h
	dialogs/MacroSaveDialog.ui
	dialogs/MainWindow.cpp
	dialogs/MainWindow.h
	dialogs/MainWindow.ui
	dialogs/PreferencesDialog.cpp
	dialogs/PreferencesDialog.h
	dialogs/PreferencesDialog.ui
	docks/AiAgentDock.cpp
	docks/AiAgentDock.h
	docks/DebugLogDock.cpp
	docks/DebugLogDock.h
	docks/DebugLogDock.ui
	docks/EditorInspectorDock.cpp
	docks/EditorInspectorDock.h
	docks/EditorInspectorDock.ui
	docks/FileListDock.cpp
	docks/FileListDock.h
	docks/FileListDock.ui
	docks/FolderAsWorkspaceDock.cpp
	docks/FolderAsWorkspaceDock.h
	docks/FolderAsWorkspaceDock.ui
	docks/FolderAsWorkspaceFsModel.cpp
	docks/FolderAsWorkspaceFsModel.h

	git/BranchPickerPopup.cpp
	git/BranchPickerPopup.h
	git/BranchRefParser.cpp
	git/BranchRefParser.h
	git/BufferDiffEngine.cpp
	git/BufferDiffEngine.h
	git/CatFileBlobFetcher.cpp
	git/CatFileBlobFetcher.h
	git/ChangesPanel.cpp
	git/ChangesPanel.h
	git/CommitComposer.cpp
	git/CommitComposer.h
	git/FileEncodingDetector.cpp
	git/FileEncodingDetector.h
	git/GitBlameParser.cpp
	git/GitBlameParser.h
	git/GitBlameFetcher.cpp
	git/GitBlameFetcher.h
	git/GitController.cpp
	git/GitController.h
	git/GitCommitDetail.h
	git/GitCommitFetcher.cpp
	git/GitCommitFetcher.h
	git/GitCommitInfo.h
	git/GitCommitRenderer.cpp
	git/GitCommitRenderer.h
	git/GitCommitView.cpp
	git/GitCommitView.h
	git/GitDiffCache.cpp
	git/GitDiffCache.h
	git/GitDiffFetcher.cpp
	git/GitDiffFetcher.h
	git/GitDiffPainter.cpp
	git/GitDiffPainter.h
	git/GitDiffPalette.cpp
	git/GitDiffPalette.h
	git/GitDiffParser.cpp
	git/GitDiffParser.h
	git/GitDiffSyntaxMapper.cpp
	git/GitDiffSyntaxMapper.h
	git/GitDiffViewController.cpp
	git/GitDiffViewController.h
	git/GitError.h
	git/GitErrorClassifier.cpp
	git/GitErrorClassifier.h
	git/GitBaseBlobCache.cpp
	git/GitBaseBlobCache.h
	git/GitFileAtShaFetcher.cpp
	git/GitFileAtShaFetcher.h
	git/GitHistoryFetcher.cpp
	git/GitHistoryFetcher.h
	git/GitHistoryItemDelegate.cpp
	git/GitHistoryItemDelegate.h
	git/GitHistoryModel.cpp
	git/GitHistoryModel.h
	git/GitHistoryView.cpp
	git/GitHistoryView.h
	git/GitLogParser.cpp
	git/GitLogParser.h
	git/GitNumstatParser.cpp
	git/GitNumstatParser.h
	git/GitProcessRunner.cpp
	git/GitProcessRunner.h
	git/PathStatusIndex.cpp
	git/PathStatusIndex.h
	git/SubmoduleStatusFetcher.cpp
	git/SubmoduleStatusFetcher.h
	git/GitTabSegmentedBar.cpp
	git/GitTabSegmentedBar.h
	git/GitRepoDiscovery.cpp
	git/GitRepoDiscovery.h
	git/GitRepoInfo.h
	git/GitRepoModel.cpp
	git/GitRepoModel.h
	git/GitStatusEntry.h
	git/GitStatusItemDelegate.cpp
	git/GitStatusItemDelegate.h
	git/GitStatusModel.cpp
	git/GitStatusModel.h
	git/GitStatusParser.cpp
	git/GitStatusParser.h
	git/GitTabWidget.cpp
	git/GitTabWidget.h
	git/GitTypes.cpp
	git/GitWatcher.cpp
	git/GitWatcher.h

	docks/LanguageInspectorDock.cpp
	docks/LanguageInspectorDock.h
	docks/LanguageInspectorDock.ui
	docks/LuaConsoleDock.cpp
	docks/LuaConsoleDock.h
	docks/LuaConsoleDock.ui
	docks/SearchResultsDock.cpp
	docks/SearchResultsDock.h
	docks/SearchResultsDock.ui
    widgets/AcpImageAttachmentList.cpp
	widgets/AcpImageAttachmentList.h
	widgets/AcpMessageWidget.cpp
	widgets/AcpMessageWidget.h
	widgets/AcpPermissionPrompt.cpp
	widgets/AcpPermissionPrompt.h
	widgets/AcpPlanWidget.cpp
	widgets/AcpPlanWidget.h
	widgets/AcpSessionView.cpp
	widgets/AcpSessionView.h
	widgets/AcpToolCallCard.cpp
	widgets/AcpToolCallCard.h
	widgets/AcpUsageIndicator.cpp
	widgets/AcpUsageIndicator.h
    widgets/DockMiddleClickCloser.cpp
	widgets/DockMiddleClickCloser.h
    widgets/EditorInfoStatusBar.cpp
	widgets/EditorInfoStatusBar.h
	widgets/EditorMinimap.cpp
	widgets/EditorMinimap.h
	widgets/MinimapMath.h
	widgets/FadingIndicator.cpp
	widgets/FadingIndicator.h
	widgets/QuickFindWidget.cpp
	widgets/QuickFindWidget.h
	widgets/QuickFindWidget.ui
	widgets/StatusLabel.cpp
	widgets/StatusLabel.h
	Sorter.h Sorter.cpp
	ScintillaSorter.h ScintillaSorter.cpp
	widgets/TabsQuickActionsBar.cpp
	widgets/TabsQuickActionsBar.h

	TerminalAiHelper.h
	TerminalAiHelper.cpp
	TerminalCwdResolver.h
	TerminalCwdResolver.cpp
	TerminalManager.h
	TerminalManager.cpp
	TerminalTaskRegistry.h
	TerminalTaskRegistry.cpp
	widgets/TerminalColorScheme.h
	widgets/TerminalColorScheme.cpp
	widgets/ScrollbackBuffer.h
	widgets/ScrollbackBuffer.cpp
	widgets/TerminalCellSource.h
	widgets/TerminalCellSource.cpp
	widgets/TerminalWidget.h
	widgets/TerminalWidget.cpp
	docks/TerminalDock.h
	docks/TerminalDock.cpp

	ai/DiffCompressor.h
	ai/DiffCompressor.cpp
	ai/PromptAssembler.h
	ai/PromptAssembler.cpp
	ai/RulesLocator.h
	ai/RulesLocator.cpp
	ai/SsePartialParser.h
	ai/SsePartialParser.cpp
	ai/CredentialStore.h
	ai/CredentialStore_Common.cpp
	ai/ILlmHttpClient.h
	ai/LlmHttpClient.h
	ai/LlmHttpClient.cpp
	ai/CommitMessageGenerator.h
	ai/CommitMessageGenerator.cpp
)

# Platform-conditional CredentialStore backend + native API link.
if(WIN32)
    target_sources(NotepadAI PRIVATE ai/CredentialStore_Windows.cpp)
    target_link_libraries(NotepadAI PRIVATE crypt32)
elseif(APPLE)
    target_sources(NotepadAI PRIVATE ai/CredentialStore_Mac.mm)
    target_link_libraries(NotepadAI PRIVATE "-framework Security" "-framework CoreFoundation")
else()
    target_sources(NotepadAI PRIVATE ai/CredentialStore_Linux.cpp)
    # libsecret resolved at runtime via QLibrary("secret-1"); no build dep.
endif()

set_target_properties(NotepadAI PROPERTIES
    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_SOURCE_DIR}/deploy/macos/info.plist
)

file(GLOB TS_FILES
	${CMAKE_SOURCE_DIR}/i18n/*.ts
)

find_package(Qt6 REQUIRED COMPONENTS LinguistTools)
qt_add_translations(NotepadAI
    TS_FILES ${TS_FILES}
    RESOURCE_PREFIX "/i18n"
)


target_include_directories(NotepadAI
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/decorators
        ${CMAKE_CURRENT_SOURCE_DIR}/dialogs
        ${CMAKE_CURRENT_SOURCE_DIR}/docks
        ${CMAKE_CURRENT_SOURCE_DIR}/git
        ${CMAKE_CURRENT_SOURCE_DIR}/widgets
        ${CMAKE_CURRENT_SOURCE_DIR}
)

if(WIN32)
	# project() leaves PROJECT_VERSION_PATCH empty when VERSION has only major.minor;
	# the Windows RC FILEVERSION field requires a numeric value, and NSIS reads this
	# back via !getdllversion to derive the installer filename, so default to 0.
	set(PROJECT_VERSION_PATCH_OR_ZERO "${PROJECT_VERSION_PATCH}")
	if(NOT PROJECT_VERSION_PATCH_OR_ZERO)
		set(PROJECT_VERSION_PATCH_OR_ZERO 0)
	endif()
	configure_file(
		"${CMAKE_SOURCE_DIR}/deploy/windows/version.rc.in"
		"${CMAKE_BINARY_DIR}/version.rc"
		@ONLY
	)
	target_sources(NotepadAI PRIVATE "${CMAKE_BINARY_DIR}/version.rc")
	configure_file(
		"${CMAKE_SOURCE_DIR}/icon/NotepadAI.ico"
		"${CMAKE_BINARY_DIR}/NotepadAI.ico"
		COPYONLY
	)
endif()

target_link_libraries(NotepadAI
    PRIVATE
        Qt6::Core
        Qt6::Gui
        Qt6::Widgets
        Qt6::Network
        Qt6::PrintSupport
        qtadvanceddocking-qt6
        QSimpleUpdater
        SingleApplication::SingleApplication
        editorconfig-core-qt
        lua
        lexilla
        scintilla
        uchardet
        libvterm
        libptyqt
        xxhash
        xdiff
)

target_compile_definitions(NotepadAI
    PRIVATE
        ADS_STATIC
        QSIMPLEUPDATER_STATIC
        QAPPLICATION_CLASS=QApplication
        APP_VERSION="${PROJECT_VERSION}"
        APP_COPYRIGHT="${APP_COPYRIGHT}"
        APP_DISTRIBUTION="${APP_DISTRIBUTION}"
)
