qt_add_executable(NotepadAI
	WIN32
	MACOSX_BUNDLE
	AcpAgentDefinition.h
	AcpAgentManager.h
	AcpAgentRegistry.h
	AcpConnection.h
	AcpErrorClassifier.h
	AcpHistoryStore.h
	AcpProtocol.h
	AcpSessionModel.h
	ActionUtils.h
	ApplicationSettings.h
	CronExpression.h
	GoalActionParser.h
	GoalAgent.h
	GoalAgentSettings.h
	GoalPromptRenderer.h
	BrowserProxyArgs.h
	ByteArrayUtils.h
	ColorPickerDelegate.h
	ComboBoxDelegate.h
	Converter.h
	CrashContext.h
	CrashHandler.h
	DataPaths.h
	DebugManager.h
	DefaultDirectoryManager.h
	DockAreaSanitizer.h
	DockedEditor.h
	DockedEditorTitleBar.h
	IAcpExecHost.h
	IAcpProcessChannel.h
	LocalAcpProcessChannel.h
	SshAcpProcessChannel.h
	SshConnectionExecHost.h

	EditorManager.h
	EditorPrintPreviewRenderer.h
	FileDialogHelpers.h
	FileIndexCache.h
	FileWatcher.h
	Finder.h
	FocusWatcher.h
	HtmlConverter.h
	HtmlPreviewWidget.h
	CsvPreviewWidget.h
	CsvTableModel.h
	CsvDocument.h
	CsvSortFilter.h
	CsvFilterStrip.h
	IFaceTable.h
	MarkdownPreviewWidget.h
	MarkdownRenderer.h
	PandocExporter.h
	PreviewContentWidget.h
	PreviewTabManager.h
	IFaceTableMixer.h
	ISearchResultsHandler.h
	LanguageStylesModel.h
	LuaExtension.h
	LuaState.h
	Macro.h
	MacroListModel.h
	MacroManager.h
	MacroRecorder.h
	MacroStep.h
	MacroStepTableModel.h
	NotepadNextApplication.h
	NppImporter.h
	QRegexSearch.h
	RangeAllocator.h
	RecentFilesListManager.h
	RecentFilesListMenuBuilder.h
	RtfConverter.h
	SciIFaceTable.h
	ScintillaCommenter.h
	ScintillaEnums.h
	ScintillaNext.h
	ScheduledTaskDefinition.h
	ScheduledTaskRegistry.h
	ScheduledTaskRunner.h
	SearchResultData.h
	SearchResultHighlighterDelegate.h
	SearchResultsCollector.h
	SelectionTracker.h
	SessionManager.h
	SpinBoxDelegate.h
	TranslationManager.h
	UndoAction.h
	WorkspaceFileEnumerator.h
	ZoomEventWatcher.h
	ThemeResolver.h
	StylesheetResource.h
	DarkPalette.h
	ProfileScope.h
	ShutdownDiagnostics.h
	resources.qrc
	scripts.qrc
	ApplicationSettings.cpp
	AcpAgentManager.cpp
	AcpAgentRegistry.cpp
	AcpConnection.cpp
	AcpErrorClassifier.cpp
	AcpHistoryStore.cpp
	AcpProtocol.cpp
	AcpSessionModel.cpp
	LocalAcpProcessChannel.cpp
	SshAcpProcessChannel.cpp
	CronExpression.cpp
	GoalActionParser.cpp
	GoalAgent.cpp
	GoalAgentSettings.cpp
	GoalPromptRenderer.cpp
	BrowserProxyArgs.cpp
	ColorPickerDelegate.cpp
	ComboBoxDelegate.cpp
	Converter.cpp
	CrashContext.cpp
	CrashHandler.cpp
	DataPaths.cpp
	DebugManager.cpp
	DefaultDirectoryManager.cpp
	DockAreaSanitizer.cpp
	DockedEditor.cpp

	EditorManager.cpp
	EditorPrintPreviewRenderer.cpp
	FileDialogHelpers.cpp
	FileWatcher.cpp
	Finder.cpp
	HtmlConverter.cpp
	HtmlPreviewWidget.cpp
	CsvPreviewWidget.cpp
	CsvTableModel.cpp
	CsvEditCommands.cpp
	CsvDocument.cpp
	CsvSortFilter.cpp
	CsvFilterStrip.cpp
	IFaceTable.cpp
	MarkdownPreviewWidget.cpp
	MarkdownRenderer.cpp
	PandocExporter.cpp
	PreviewTabManager.cpp
	IFaceTableMixer.cpp
	LanguageStylesModel.cpp
	LuaExtension.cpp
	LuaState.cpp
	Macro.cpp
	MacroListModel.cpp
	MacroManager.cpp
	MacroRecorder.cpp
	MacroStep.cpp
	MacroStepTableModel.cpp
	main.cpp
	NotepadNextApplication.cpp
	NppImporter.cpp
	QRegexSearch.cpp
	RangeAllocator.cpp
	RecentFilesListManager.cpp
	RecentFilesListMenuBuilder.cpp
	RtfConverter.cpp
	SciIFaceTable.cpp
	ScintillaCommenter.cpp
	ScintillaNext.cpp
	ScheduledTaskRegistry.cpp
	ScheduledTaskRunner.cpp
	SearchResultHighlighterDelegate.cpp
	SearchResultsCollector.cpp
	SelectionTracker.cpp
	SessionManager.cpp
	SpinBoxDelegate.cpp
	TranslationManager.cpp
	UndoAction.cpp
	WorkspaceFileEnumerator.cpp
	ZoomEventWatcher.cpp
	ProfileScope.cpp
	ShutdownDiagnostics.cpp
	decorators/ApplicationDecorator.cpp
	decorators/ApplicationDecorator.h
	decorators/AutoCompletion.cpp
	decorators/AutoCompletion.h
	decorators/AutoIndentation.cpp
	decorators/AutoIndentation.h
	decorators/BetterMultiSelection.cpp
	decorators/BetterMultiSelection.h
	decorators/BookMarkDecorator.cpp
	decorators/BookMarkDecorator.h
	decorators/BraceMatch.cpp
	decorators/BraceMatch.h
	decorators/EditorConfigAppDecorator.cpp
	decorators/EditorConfigAppDecorator.h
	decorators/EditorDecorator.cpp
	decorators/EditorDecorator.h
	decorators/GitGutterDecorator.cpp
	decorators/GitGutterDecorator.h
	decorators/GitGutterDiffPopup.cpp
	decorators/GitGutterDiffPopup.h
	decorators/GitGutterMarkers.cpp
	decorators/GitGutterMarkers.h
	decorators/HighlightedScrollBar.cpp
	decorators/HighlightedScrollBar.h
	decorators/InlineBlameDecorator.cpp
	decorators/InlineBlameDecorator.h
	decorators/JustfileRecipeHighlighter.cpp
	decorators/JustfileRecipeHighlighter.h
	decorators/HTMLAutoCompleteDecorator.cpp
	decorators/HTMLAutoCompleteDecorator.h
	decorators/LineNumbers.cpp
	decorators/LineNumbers.h
	decorators/MarkerAppDecorator.cpp
	decorators/MarkerAppDecorator.h
	decorators/SmartHighlighter.cpp
	decorators/SmartHighlighter.h
	decorators/SurroundSelection.cpp
	decorators/SurroundSelection.h
	decorators/URLFinder.cpp
	decorators/URLFinder.h
	dialogs/AcpAgentSettingsDialog.cpp
	dialogs/AcpAgentSettingsDialog.h
	dialogs/AcpAgentSettingsDialog.ui
	dialogs/SendWithGoalDialog.cpp
	dialogs/SendWithGoalDialog.h
	dialogs/ScheduledTaskDialog.cpp
	dialogs/ScheduledTaskDialog.h
	dialogs/EditScheduledTaskDialog.cpp
	dialogs/EditScheduledTaskDialog.h
	dialogs/GoalAgentConfigDialog.cpp
	dialogs/GoalAgentConfigDialog.h
	dialogs/EditTasksDialog.cpp
	dialogs/EditTasksDialog.h
	dialogs/EditMiniAppsDialog.cpp
	dialogs/EditMiniAppsDialog.h
	dialogs/ColumnEditorDialog.cpp
	dialogs/ColumnEditorDialog.h
	dialogs/ColumnEditorDialog.ui
	dialogs/FindReplaceDialog.cpp
	dialogs/FindReplaceDialog.h
	dialogs/FindReplaceDialog.ui
	dialogs/MacroEditorDialog.cpp
	dialogs/MacroEditorDialog.h
	dialogs/MacroEditorDialog.ui
	dialogs/MacroRunDialog.cpp
	dialogs/MacroRunDialog.h
	dialogs/MacroRunDialog.ui
	dialogs/MacroSaveDialog.cpp
	dialogs/MacroSaveDialog.h
	dialogs/MacroSaveDialog.ui
	dialogs/MainWindow.cpp
	dialogs/MainWindow.h
	dialogs/MainWindow.ui
	dialogs/QuickFileOpenDialog.cpp
	dialogs/QuickFileOpenDialog.h
	dialogs/InteractiveRebaseDialog.cpp
	dialogs/InteractiveRebaseDialog.h
	dialogs/PreferencesDialog.cpp
	dialogs/PreferencesDialog.h
	dialogs/PreferencesDialog.ui
	dialogs/SshConnectionManagerDialog.cpp
	dialogs/SshConnectionManagerDialog.h
	dialogs/SshConnectDialog.cpp
	dialogs/SshConnectDialog.h
	dialogs/SshRemoteFolderPickerDialog.cpp
	dialogs/SshRemoteFolderPickerDialog.h
	dialogs/SshDebugDialog.h
	dialogs/SshDebugDialog.cpp
	docks/AiAgentDock.cpp
	docks/AiAgentDock.h
	docks/DebugLogDock.cpp
	docks/DebugLogDock.h
	docks/DebugLogDock.ui
	docks/EditorInspectorDock.cpp
	docks/EditorInspectorDock.h
	docks/EditorInspectorDock.ui
	docks/FileListDock.cpp
	docks/FileListDock.h
	docks/FileListDock.ui
	docks/FolderAsWorkspaceDock.cpp
	docks/FolderAsWorkspaceDock.h
	docks/FolderAsWorkspaceDock.ui
	docks/FolderAsWorkspaceFsModel.cpp
	docks/FolderAsWorkspaceFsModel.h
	docks/FolderAsWorkspaceProxyModel.cpp
	docks/FolderAsWorkspaceProxyModel.h

	git/BranchPickerPopup.cpp
	git/BranchPickerPopup.h
	git/BranchRefParser.cpp
	git/BranchRefParser.h
	git/BufferDiffEngine.cpp
	git/BufferDiffEngine.h
	git/CatFileBlobFetcher.cpp
	git/CatFileBlobFetcher.h
	git/ChangesPanel.cpp
	git/ChangesPanel.h
	git/CommitComposer.cpp
	git/CommitComposer.h
	git/FileEncodingDetector.cpp
	git/FileEncodingDetector.h
	git/GitBlameParser.cpp
	git/GitBlameParser.h
	git/GitBlameFetcher.cpp
	git/GitBlameFetcher.h
	git/GitController.cpp
	git/GitController.h
	git/GitCommitDetail.h
	git/GitCommitFetcher.cpp
	git/GitCommitFetcher.h
	git/GitCommitInfo.h
	git/GitCommitRenderer.cpp
	git/GitCommitRenderer.h
	git/GitCommitView.cpp
	git/GitCommitView.h
	git/GitDiffCache.cpp
	git/GitDiffCache.h
	git/GitDiffFetcher.cpp
	git/GitDiffFetcher.h
	git/GitDiffPainter.cpp
	git/GitDiffPainter.h
	git/GitDiffPalette.cpp
	git/GitDiffPalette.h
	git/GitDiffParser.cpp
	git/GitDiffParser.h
	git/GitDiffSyntaxMapper.cpp
	git/GitDiffSyntaxMapper.h
	git/GitDiffViewController.cpp
	git/GitDiffViewController.h
	git/GitError.h
	git/GitErrorClassifier.cpp
	git/GitErrorClassifier.h
	git/GitBaseBlobCache.cpp
	git/GitBaseBlobCache.h
	git/GitFileAtShaFetcher.cpp
	git/GitFileAtShaFetcher.h
	git/GitHistoryFetcher.cpp
	git/GitHistoryFetcher.h
	git/GitHistoryItemDelegate.cpp
	git/GitHistoryItemDelegate.h
	git/GitHistoryModel.cpp
	git/GitHistoryModel.h
	git/GitHistoryView.cpp
	git/GitHistoryView.h
	git/GitLogParser.cpp
	git/GitLogParser.h
	git/GitNumstatParser.cpp
	git/GitNumstatParser.h
	git/GitProcessRunner.cpp
	git/GitProcessRunner.h
	git/GitRunnerFactory.cpp
	git/GitRunnerFactory.h
	git/PathStatusIndex.cpp
	git/PathStatusIndex.h
	git/SubmoduleStatusFetcher.cpp
	git/SubmoduleStatusFetcher.h
	git/GitTabSegmentedBar.cpp
	git/GitTabSegmentedBar.h
	git/GitRepoDiscovery.cpp
	git/GitRepoDiscovery.h
	git/GitRepoInfo.h
	git/GitRepoModel.cpp
	git/GitRepoModel.h
	git/GitStatusEntry.h
	git/GitStatusItemDelegate.cpp
	git/GitStatusItemDelegate.h
	git/GitStatusModel.cpp
	git/GitStatusModel.h
	git/GitStatusParser.cpp
	git/GitStatusParser.h
	git/GitTabWidget.cpp
	git/GitTabWidget.h
	git/GitTypes.cpp
	git/GitWatcher.cpp
	git/GitWatcher.h
	git/RecursiveTreeWatcher.cpp
	git/RecursiveTreeWatcher.h
	git/RecursiveTreeWatcherLogic.h
	git/ConflictEntry.h
	git/GitOperationManager.cpp
	git/GitOperationManager.h
	git/SyncScrollMap.cpp
	git/SyncScrollMap.h

	docks/LanguageInspectorDock.cpp
	docks/LanguageInspectorDock.h
	docks/LanguageInspectorDock.ui
	docks/ConflictListDock.cpp
	docks/ConflictListDock.h
	docks/ConflictMergeViewerDock.cpp
	docks/ConflictMergeViewerDock.h
	docks/LuaConsoleDock.cpp
	docks/LuaConsoleDock.h
	docks/LuaConsoleDock.ui
	docks/SearchResultsDock.cpp
	docks/SearchResultsDock.h
	docks/SearchResultsDock.ui
    widgets/AcpImageAttachmentList.cpp
	widgets/AcpImageAttachmentList.h
	widgets/AcpMessageWidget.cpp
	widgets/AcpMessageWidget.h
	widgets/AcpPermissionPrompt.cpp
	widgets/AcpPermissionPrompt.h
	widgets/AcpPlanWidget.cpp
	widgets/AcpPlanWidget.h
	widgets/AcpSessionView.cpp
	widgets/AcpSessionView.h
	widgets/AcpToolCallCard.cpp
	widgets/AcpToolCallCard.h
	widgets/AcpUsageIndicator.cpp
	widgets/AcpUsageIndicator.h
    widgets/DockMiddleClickCloser.cpp
	widgets/DockMiddleClickCloser.h
    widgets/EditorInfoStatusBar.cpp
	widgets/EditorInfoStatusBar.h
	widgets/EditorMinimap.cpp
	widgets/EditorMinimap.h
	widgets/GoalConfigWidget.cpp
	widgets/GoalConfigWidget.h
	widgets/MinimapMath.h
	widgets/TaskRunnerGutter.cpp
	widgets/TaskRunnerGutter.h
	widgets/FadingIndicator.cpp
	widgets/FadingIndicator.h
	widgets/QuickFindWidget.cpp
	widgets/QuickFindWidget.h
	widgets/QuickFindWidget.ui
	widgets/StatusLabel.cpp
	widgets/StatusLabel.h
	Sorter.h Sorter.cpp
	ScintillaSorter.h ScintillaSorter.cpp
	widgets/TabsQuickActionsBar.cpp
	widgets/TabsQuickActionsBar.h
	widgets/WebViewWidget.h
	widgets/WebViewWidget.cpp

	TerminalAiHelper.h
	TerminalAiHelper.cpp
	TerminalCwdResolver.h
	TerminalCwdResolver.cpp
	TerminalManager.h
	TerminalManager.cpp
	TerminalTaskRegistry.h
	TerminalTaskRegistry.cpp
	MiniAppDefinition.h
	MiniAppRegistry.h
	MiniAppRegistry.cpp
	MiniAppInstance.h
	MiniAppInstance.cpp
	MiniAppManager.h
	MiniAppManager.cpp
	widgets/TerminalColorScheme.h
	widgets/TerminalColorScheme.cpp
	widgets/ScrollbackBuffer.h
	widgets/ScrollbackBuffer.cpp
	widgets/TerminalCellSource.h
	widgets/TerminalCellSource.cpp
	widgets/TerminalWidget.h
	widgets/TerminalWidget.cpp
	docks/TerminalDock.h
	docks/TerminalDock.cpp

	ai/DiffCompressor.h
	ai/DiffCompressor.cpp
	ai/PromptAssembler.h
	ai/PromptAssembler.cpp
	ai/RulesLocator.h
	ai/RulesLocator.cpp
	ai/SsePartialParser.h
	ai/SsePartialParser.cpp
	ai/CredentialStore.h
	ai/CredentialStore_Common.cpp
	ai/ILlmHttpClient.h
	ai/LlmHttpClient.h
	ai/LlmHttpClient.cpp
	ai/CommitMessageGenerator.h
	ai/CommitMessageGenerator.cpp
	ai/PromptImprover.h
	ai/PromptImprover.cpp

	remote/ExecutionContext.h
	remote/IFileSystemBackend.h
	remote/IWorkspaceFsModel.h
	remote/LocalExecutionContext.h
	remote/LocalExecutionContext.cpp
	remote/RemoteDirectoryWatcher.h
	remote/RemoteDirectoryWatcher.cpp
	remote/RemoteExecutionContext.h
	remote/RemoteExecutionContext.cpp
	remote/RemoteFileSystemModel.h
	remote/RemoteFileSystemModel.cpp
	remote/RemoteFsBackend.h
	remote/RemoteFsBackend.cpp
	remote/RemoteGitProcessRunner.h
	remote/RemoteGitProcessRunner.cpp
	remote/ExecutionContextRegistry.h
	remote/ExecutionContextRegistry.cpp
	remote/ISshTransport.h
	remote/Libssh2Transport.h
	remote/Libssh2Transport.cpp
	remote/SshChannel.h
	remote/SshChannel.cpp
	remote/SshSessionWorker.h
	remote/SshSessionWorker.cpp
	remote/SshConnection.h
	remote/SshConnection.cpp
	remote/SshPtyProcess.h
	remote/SshPtyProcess.cpp
	remote/SshProfile.h
	remote/SshProfileRegistry.h
	remote/SshProfileRegistry.cpp
	remote/SshHostKeyStore.h
	remote/SshHostKeyStore.cpp
)

# wildmatch.c is a C file. Isolate it in a tiny static lib so it doesn't pull a
# C compiler into the main target (which would cause CMake to compile the shared
# C++ PCH as C, breaking every C++ STL header).
add_library(wildmatch_c STATIC remote/wildmatch.c remote/wildmatch.h)
target_include_directories(wildmatch_c PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/remote)
target_link_libraries(NotepadAI PRIVATE wildmatch_c)

target_sources(NotepadAI PRIVATE remote/GitignoreMatcher.cpp remote/GitignoreMatcher.h)
target_sources(NotepadAI PRIVATE widgets/TransferProgressBar.cpp widgets/TransferProgressBar.h)
target_sources(NotepadAI PRIVATE dialogs/TransferConflictDialog.cpp dialogs/TransferConflictDialog.h)
target_sources(NotepadAI PRIVATE dialogs/TransferLogDialog.cpp dialogs/TransferLogDialog.h)
target_sources(NotepadAI PRIVATE remote/RemoteTransferManager.cpp remote/RemoteTransferManager.h)

# Platform-conditional CredentialStore backend + native API link.
if(WIN32)
    target_sources(NotepadAI PRIVATE ai/CredentialStore_Windows.cpp)
    # crypt32/dbghelp: existing deps. ws2_32: winsock for the SSH transport's
    # raw socket (Libssh2Transport.cpp calls getaddrinfo/connect/closesocket).
    target_link_libraries(NotepadAI PRIVATE crypt32 dbghelp ws2_32)
elseif(APPLE)
    target_sources(NotepadAI PRIVATE ai/CredentialStore_Mac.mm)
    target_link_libraries(NotepadAI PRIVATE "-framework Security" "-framework CoreFoundation")
else()
    target_sources(NotepadAI PRIVATE ai/CredentialStore_Linux.cpp)
    # libsecret resolved at runtime via QLibrary("secret-1"); no build dep.
endif()

# Platform-conditional WebView widget for Mini Apps.
if(WIN32)
    target_sources(NotepadAI PRIVATE widgets/WebViewWidget_win.cpp)
    target_link_libraries(NotepadAI PRIVATE webview2)
elseif(APPLE)
    enable_language(OBJCXX)
    target_sources(NotepadAI PRIVATE widgets/WebViewWidget_mac.mm)
    target_link_libraries(NotepadAI PRIVATE "-framework WebKit")
endif()

set_target_properties(NotepadAI PROPERTIES
    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_SOURCE_DIR}/deploy/macos/info.plist
)

file(GLOB TS_FILES
	${CMAKE_SOURCE_DIR}/i18n/*.ts
)

find_package(Qt6 REQUIRED COMPONENTS LinguistTools)
qt_add_translations(NotepadAI
    TS_FILES ${TS_FILES}
    RESOURCE_PREFIX "/i18n"
)


target_include_directories(NotepadAI
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/decorators
        ${CMAKE_CURRENT_SOURCE_DIR}/dialogs
        ${CMAKE_CURRENT_SOURCE_DIR}/docks
        ${CMAKE_CURRENT_SOURCE_DIR}/git
        ${CMAKE_CURRENT_SOURCE_DIR}/remote
        ${CMAKE_CURRENT_SOURCE_DIR}/widgets
        ${CMAKE_CURRENT_SOURCE_DIR}
)

if(WIN32)
	# project() leaves PROJECT_VERSION_PATCH empty when VERSION has only major.minor;
	# the Windows RC FILEVERSION field requires a numeric value, and NSIS reads this
	# back via !getdllversion to derive the installer filename, so default to 0.
	set(PROJECT_VERSION_PATCH_OR_ZERO "${PROJECT_VERSION_PATCH}")
	if(NOT PROJECT_VERSION_PATCH_OR_ZERO)
		set(PROJECT_VERSION_PATCH_OR_ZERO 0)
	endif()
	configure_file(
		"${CMAKE_SOURCE_DIR}/deploy/windows/version.rc.in"
		"${CMAKE_BINARY_DIR}/version.rc"
		@ONLY
	)
	target_sources(NotepadAI PRIVATE "${CMAKE_BINARY_DIR}/version.rc")
	configure_file(
		"${CMAKE_SOURCE_DIR}/icon/NotepadAI.ico"
		"${CMAKE_BINARY_DIR}/NotepadAI.ico"
		COPYONLY
	)
endif()

target_link_libraries(NotepadAI
    PRIVATE
        Qt6::Core
        Qt6::Gui
        Qt6::Widgets
        Qt6::Network
        Qt6::PrintSupport
        Qt6::Concurrent
        qtadvanceddocking-qt6
        QSimpleUpdater
        SingleApplication::SingleApplication
        editorconfig-core-qt
        lua
        lexilla
        scintilla
        uchardet
        libvterm
        libptyqt
        xxhash
        xdiff
        md4c
        supertinycron
        libssh2
        sentry
)

target_compile_definitions(NotepadAI
    PRIVATE
        ADS_STATIC
        QSIMPLEUPDATER_STATIC
        QAPPLICATION_CLASS=QApplication
        APP_VERSION="${PROJECT_VERSION}"
        APP_COPYRIGHT="${APP_COPYRIGHT}"
        APP_DISTRIBUTION="${APP_DISTRIBUTION}"
)

# --- notepadai-editor: helper exe for GIT_SEQUENCE_EDITOR / GIT_EDITOR ---
qt_add_executable(notepadai-editor
    helpers/notepadai-editor.cpp
)
target_link_libraries(notepadai-editor PRIVATE Qt6::Core Qt6::Network)
set_target_properties(notepadai-editor PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)
install(TARGETS notepadai-editor RUNTIME DESTINATION bin)
